NetBSD Problem Report #42770

From asau@inbox.ru  Mon Feb  8 17:07:57 2010
Return-Path: <asau@inbox.ru>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id C876C63BBAC
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  8 Feb 2010 17:07:57 +0000 (UTC)
Message-Id: <87pr4fejvl.fsf@inbox.ru>
Date: Mon, 08 Feb 2010 20:07:42 +0300
From: Aleksej Saushev <asau@inbox.ru>
Reply-To:
To: gnats-bugs@gnats.NetBSD.org
Subject: sysinst welcome message is unreadable

>Number:         42770
>Category:       lib
>Synopsis:       sysinst welcome message is unreadable
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    roy
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Feb 08 17:10:00 +0000 2010
>Closed-Date:    Fri Feb 12 12:47:29 +0000 2010
>Last-Modified:  Fri Feb 12 12:47:29 +0000 2010
>Originator:     Aleksej Saushev <asau@inbox.ru>
>Release:        NetBSD 5.99.24
>Organization:
>Environment:
System: NetBSD lithium 5.99.24 NetBSD 5.99.24 (KERN) #0: Sun Feb 7 08:48:53 MSK 2010 asau@lithium:/usr/obj/sys/arch/i386/compile/KERN i386
Architecture: i386
Machine: i386
>Description:
	sysinst doesn't return carriage when printing welcome message,
        producing thus a ladder of wrapped lines.
        This happens with installation CD built from HEAD as of ca. 2010-02-06
>How-To-Repeat:
	Build installation CD image, boot it.
>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: lib-bug-people->roy
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Tue, 09 Feb 2010 18:11:59 +0000
Responsible-Changed-Why:
Sysinst in a full populated system works - Roy, can you please verify all
needed parts are on the i386 boot cd root file system?


From: Roy Marples <roy@NetBSD.org>
To: gnats-bugs@NetBSD.org
Cc: martin@NetBSD.org, lib-bug-people@netbsd.org, netbsd-bugs@netbsd.org, 
 gnats-admin@netbsd.org, Aleksej Saushev <asau@inbox.ru>, jdc@NetBSD.org
Subject: Re: lib/42770 (sysinst welcome message is unreadable)
Date: Fri, 12 Feb 2010 08:41:55 +0000

 On 02/09/10 18:11, martin@NetBSD.org wrote:
 > Sysinst in a full populated system works - Roy, can you please verify all
 > needed parts are on the i386 boot cd root file system?

 Oh, all parts are fully populated.

 If we change vt220 entry from ind=\ED to ind=\ED$<20/> to match the 
 vt220 entry from the old termcap it all works.

 However, this does not match upstream definition of vt220 ind, and 
 interestingly changing termcap to sf=\ED doesn't break this on NetBSD-5

 So I believe the issue is with libcurses, probably an error in my patch. 
 What the error is, I don't entirely know. Whilst we could band-aid via 
 terminfo description I don't think this is the correct fix.

 Thanks

 Roy

From: Martin Husemann <martin@duskware.de>
To: Roy Marples <roy@NetBSD.org>
Cc: gnats-bugs@NetBSD.org, martin@NetBSD.org, lib-bug-people@netbsd.org,
	netbsd-bugs@netbsd.org, gnats-admin@netbsd.org,
	Aleksej Saushev <asau@inbox.ru>, jdc@NetBSD.org
Subject: Re: lib/42770 (sysinst welcome message is unreadable)
Date: Fri, 12 Feb 2010 10:01:14 +0100

 On Fri, Feb 12, 2010 at 08:41:55AM +0000, Roy Marples wrote:
 > If we change vt220 entry from ind=\ED to ind=\ED$<20/> to match the 
 > vt220 entry from the old termcap it all works.

 Ah, I see - you can reproduce (and debug) it on a running system, but the
 key is to set TERM to vt220 (or wsvt25) - it works with vt100 or xterm.

 Martin

From: Roy Marples <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42770 CVS commit: src/lib/libcurses
Date: Fri, 12 Feb 2010 10:06:15 +0000

 Module Name:	src
 Committed By:	roy
 Date:		Fri Feb 12 10:06:15 UTC 2010

 Modified Files:
 	src/lib/libcurses: cr_put.c

 Log Message:
 Change from scroll_forward to cursor_down.
 cursor_down is more similar to our old termcap use of nl.
 Fixes PR lib/42770.


 To generate a diff of this commit:
 cvs rdiff -u -r1.29 -r1.30 src/lib/libcurses/cr_put.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: roy@NetBSD.org
State-Changed-When: Fri, 12 Feb 2010 12:47:29 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.