Change from scroll_forward to cursor_down. cursor_down is more similar to our old termcap use of nl. Fixes PR lib/42770.